Fixes action button alignment for mobile first.

--- a/sqlshare_web/static/sqlshare_web/css/desktop.less
+++ b/sqlshare_web/static/sqlshare_web/css/desktop.less
@@ -19,7 +19,11 @@
 .sql-content { margin-top: 80px;  margin-left: 240px; 
     
     h2 { margin-top: 0; }
-    .sql-content-inner { padding: 20px; }
+    .sql-content-inner { padding: 20px; 
+        
+        
+        .sql-dataset-actions { position:absolute; top:0; right:0; width:280px; text-align:right; }
+    }
 }
 
 .sql-footer { margin-left: 240px; color: #666; }
