--- a/sqlshare_web/static/sqlshare_web/css/mobile.less
+++ b/sqlshare_web/static/sqlshare_web/css/mobile.less
@@ -16,9 +16,9 @@
             textarea { resize: vertical; }
         }
         
+        .sql-dataset-actions { margin-bottom: 1em; text-align: right;}
+        
     }
-    
-    
     
 }
 
